--- a/reactRank/src/index.css
+++ b/reactRank/src/index.css
@@ -29,15 +29,26 @@ body {
 .gamecontainer {
   position: relative;
   width: 400px;
-  height: 140px;
+  height: 7vw;
 }
 .gamecontainer img {
   object-fit: cover;
   max-height: 100%;
   max-width: 100%;
 }
+
+.rankcontainer {
+  position: relative;
+  width: 400px;
+  height: 100px;
+}
+.rankcontainer img {
+  object-fit: cover;
+  max-height: 100%;
+  max-width: 100%;
+}
 .gametitle {
-  font-size: x-large;
+  font-size: 1.75vw;
   background-color: rgba(0, 0, 0, 0.445);
   color: white;
   text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.909);
@@ -46,6 +57,8 @@ body {
   text-align: end;
   padding-right: 5px;
   z-index: 3;
+  white-space: pre;
+  overflow: hidden;
 }
 
 .rankNum {
@@ -91,7 +104,7 @@ body {
   bottom: 5%;
 }
 .addbutton {
-  font-size: medium;
+  font-size: 1.4vw;
   position: absolute;
   text-align: end;
   color: white;
@@ -100,7 +113,7 @@ body {
   width: 50%;
   z-index: 4;
   background-color: rgba(255, 255, 255, 0.139);
-  bottom: 15px;
+  bottom: 15%;
   right: 0px;
   border: none;
   transition-duration: 0.25s;
@@ -119,11 +132,16 @@ body {
   width: 25%;
   z-index: 4;
   background-color: rgba(202, 0, 0, 0.326);
-  bottom: 30%;
+  bottom: 10%;
   right: 0px;
   border: none;
   transition-duration: 0.25s;
 }
+.deletebutton:hover {
+  background-color: rgba(218, 12, 12, 0.473);
+}
 .ranking {
   background-color: rgb(30, 30, 30);
+  text-align: center;
+  width: 100%;
 }
