--- a/reactRank/src/components/NavBar.module.css
+++ b/reactRank/src/components/NavBar.module.css
@@ -14,28 +14,33 @@
   padding: 0;
   margin: 0;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .navbar li {
-  margin: 0 1rem;
+  margin: 0 5rem;
   width: 10rem;
-  font-size: 2vw;
-  transition-duration: 0.25s;
+  font-size: 1.5vw;
+  text-align: right;
 }
 
-h3 {
-  font-weight: lighter;
-}
 .navbar a {
-  color: white;
+  color: rgb(147, 147, 147);
   text-decoration: none;
+  font-size: 2vw;
   font-weight: 100;
+  transition-duration: 0.5s;
 }
 .navbar a:hover,
-.navbar a:active,
+.navbar a:active {
+  color: rgb(240, 240, 240);
+  padding-bottom: 0.25rem;
+  border-bottom: 1px solid rgb(100, 254, 123);
+  font-size: 2vw;
+}
+
 .navbar a.active {
   color: rgb(240, 240, 240);
   padding-bottom: 0.25rem;
-  border-bottom: 1px solid whitesmoke;
+  border-bottom: 1px solid rgb(100, 254, 123);
   font-size: 2vw;
 }
