--- a/reactRank/src/index.css
+++ b/reactRank/src/index.css
@@ -43,6 +43,7 @@ footer a:hover {
 
 .search {
   outline: none;
+  width: 35%;
   color: rgb(160, 255, 175);
   background-color: rgb(97, 97, 97);
   padding: 3px 3px;
@@ -59,6 +60,7 @@ footer a:hover {
 .search:focus {
   border-bottom: 2px solid rgb(100, 254, 123);
   background-color: rgba(0, 72, 11, 0.438);
+  width: 50%;
 }
 .gamecontainer {
   position: relative;
@@ -76,9 +78,61 @@ footer a:hover {
 .selector {
   background-color: rgb(255, 248, 222);
   width: 80%;
-  border: 2px solid rgb(255, 196, 0);
+  border: 2px solid rgba(255, 196, 0, 0);
   margin-right: 5px;
   padding: 2px;
+}
+.selector:focus {
+  border: 2px solid rgb(255, 196, 0);
+}
+
+.usertell {
+  text-align: end;
+  overflow: hidden;
+  user-select: none;
+}
+
+.spawn {
+  animation-name: spawn;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+}
+
+@keyframes spawn {
+  0% {
+    color: rgb(0, 255, 85);
+    transform: translateY(10px);
+    opacity: 0%;
+  }
+  50% {
+    color: rgb(255, 255, 255);
+    transform: translateY(0px);
+  }
+  100% {
+    color: rgb(231, 231, 231);
+    transform: translateY(0px);
+    opacity: 100%;
+  }
+}
+
+.despawn {
+  animation-name: despawn;
+  animation-duration: 0.25s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes despawn {
+  0% {
+    color: rgb(255, 255, 255);
+    transform: translateY(0px);
+    opacity: 100%;
+  }
+  100% {
+    color: rgb(231, 231, 231);
+    transform: translateY(-10px);
+    opacity: 0%;
+  }
 }
 .titleForm {
   display: flex;
@@ -100,7 +154,7 @@ footer a:hover {
   text-rendering: optimizeLegibility;
 }
 .yourtitle:hover {
-  background-color: #6e6e6e;
+  background-color: #434343;
 }
 .yourtitle:focus {
   /* font-size: larger; */
@@ -129,8 +183,8 @@ footer a:hover {
   object-fit: cover;
   max-height: 100%;
   max-width: 100%;
-  transition-duration: 2s;
-  transition-timing-function: ease-out;
+  transition-duration: 5s;
+  transition-timing-function: linear;
 }
 
 .rankcontainer img:hover {
