--- a/reactRank/src/index.css
+++ b/reactRank/src/index.css
@@ -19,10 +19,14 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: rgba(36, 40, 38, 0.728);
+  background-color: rgba(36, 40, 38, 0);
   z-index: 10;
+  transition-duration: 0.25s;
 }
 
+footer:hover {
+  background-color: rgba(36, 40, 38, 0.728);
+}
 footer a:link {
   text-decoration: none;
   color: rgb(22, 224, 22);
