--- a/reactRank/src/index.css
+++ b/reactRank/src/index.css
@@ -236,6 +236,7 @@ footer a:hover {
   animation-duration: 0.3s;
   animation-fill-mode: none;
   animation-timing-function: cubic-bezier(0, 0.53, 0.08, 1.22);
+  animation-delay: 25ms;
 }
 
 @keyframes yawadnapupu {
@@ -244,6 +245,23 @@ footer a:hover {
   }
   100% {
     transform: translateY(100px);
+  }
+}
+
+.deleteaway {
+  animation-name: awaywithyou;
+  animation-duration: 0.25s;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+}
+@keyframes awaywithyou {
+  0% {
+    transform: translateX(0);
+    opacity: 100%;
+  }
+  100% {
+    transform: translateX(666px);
+    opacity: 0%;
   }
 }
 .gametitle {
